Fix: Map displaying on Mobile Devices

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
 	box-sizing: border-box;
 }
 
+html,
+body,
+#map {
+	height: 100%;
+}
+
 body {
 	font-family: "Rubik", sans-serif;
 }
